# DroneSim2Sim

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_hover.py  setup.py  thoughts.md
.cursor/rules/: dronesim2sim-dev.mdc
examples/: pybullet_hover_test.py  pybullet_transfer_learning.py  pybullet_visualize_drone.py
src/dronesim2sim/: __init__.py
src/dronesim2sim/core/: __init__.py  environments.py  models.py  tasks.py
src/dronesim2sim/core/controllers/: __init__.py  base.py  mpc.py  mppi.py  pid.py  skrl.py
src/dronesim2sim/core/simulators/: __init__.py
src/dronesim2sim/core/simulators/gazebo/: __init__.py  drone_env.py
src/dronesim2sim/core/simulators/isaac_sim/: __init__.py  drone_env.py
src/dronesim2sim/core/simulators/mujoco/: __init__.py  drone_env.py
src/dronesim2sim/core/simulators/pybullet/: __init__.py  drone_env.py
src/dronesim2sim/models/: quadrotor.urdf
src/dronesim2sim/utils/: __init__.py  math.py  math_jax.py  simulator_urdf.py  urdf.py
tests/: conftest.py  run_all_tests.py  test_compatibility.py  test_pybullet_policy.py  test_scripts.py
tests/core/: test_controllers.py  test_utils.py
tests/gazebo/: __init__.py  test_drone_env.py
tests/isaac_sim/: __init__.py  test_drone_env.py
tests/mujoco/: __init__.py  test_drone_env.py
tests/pybullet/: __init__.py  analyze_results.py  test_drone_env.py  test_policy.py
